Fri Jul 23 16:06:57 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/LocalityManager/Configuration/Process_Name.cpp:
        * DAnCE/LocalityManager/Daemon/Locality_Manager_Impl.cpp:

          Bugfixes. 

        * DAnCE/tests/LocalityManager/ProcessName:
        * DAnCE/tests/LocalityManager/ProcessName/Deployment.cdp:
        * DAnCE/tests/LocalityManager/ProcessName/run_test.pl:

          Test for process name changing.
        
        * bin/ciao_tests.lst:

          Added tests to daily build.

Fri Jul 23 15:05:19 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/LocalityManager/Configuration/Process_Name.cpp:

          Compile fixes.

Fri Jul 23 14:26:53 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/DAnCE/DAnCE_LocalityManager.idl:

          Added local interface for configuration plugins.

        * DAnCE/LocalityManager/Daemon/Locality_Manager_Impl.cpp:

          Added logic to invoke configuration plugins if present.

        * DAnCE/LocalityManager/Scheduler/Plugin_Manager.h:
        * DAnCE/LocalityManager/Scheduler/Plugin_Manager.cpp:

          Loading logic for configuration plugins.

        * DAnCE/LocalityManager/Configuration:
        * DAnCE/LocalityManager/Configuration/Configuration.mpc:
        * DAnCE/LocalityManager/Configuration/Process_Name.h:
        * DAnCE/LocalityManager/Configuration/Process_Name.cpp:
        * DAnCE/LocalityManager/Configuration/Process_Name_export.h:

          Change process name configuration plugin.  Note that this only
          works on Linux (kernel 2.6.9) and later.  If invoked on other
          platforms, it will generate a StartError exception.

Fri Jul 23 14:24:21 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/LocalityManager/Interceptors/Error_Interceptors.mpc:

          dynamicflags should use +=

Fri Jul 23 14:21:52 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>
